# ATEK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  env_atek.yml  env_atek_omni3d.yml  environment.yml  environment_aws.yml  environment_mac_py10.yml  readme.md  setup.py  setup_for_pywheel.py  setup_v1.py
cmake/: libigl.cmake
data/: adt_category_id_to_name.json  adt_challenge_prototypes.txt  adt_id_mapping.json  adt_object_info.json  adt_prototype_to_atek.csv  aeo_to_atek.csv  ase_category_id_to_name.json  ase_id_mapping.json  ase_to_atek.csv  atek_id_to_name.json  atek_name_to_id.json
data_preprocess/: adt_gt_data_processor.py  base_gt_data_processor.py  data_schema.py  data_utils.py  frame_data_processor.py  frameset_aligner.py  frameset_group_generator.py  webdataset_writer.py
docs/: ATEK_Data_Store.md  Install.md  ML_task_object_detection.md  ML_task_surface_recon.md  ModelAdaptors.md  data_loading_and_inference.md  evaluation.md  example_cubercnn_customization.md  example_demos.md  example_sam2_customization.md  example_training.md  preprocessing.md  preprocessing_configurations.md
envs/: env_atek_aws.yml  env_atek_core.yml  env_atek_full.yml  env_atek_linux.yml  env_atek_mac.yml
examples/: ATEK_CoLab_Notebook.ipynb  Demo_1_data_preprocessing.ipynb  Demo_2_data_store_and_inference.ipynb  Demo_3_model_training.ipynb  Demo_4_Sam2_example.ipynb  atek_data_preprocessing_example.ipynb  atek_data_preprocessing_playgroud.ipynb  dataloading_example.ipynb  demo_1_data_preprocessing.ipynb  demo_2_data_store.ipynb  demo_2_data_store_and_training.ipynb  (+17 more)
(+191 files in other folders)
